[package]
name = "limiter"
version = "0.2.0"
authors = ["Garrett Squire <garrettsquire@gmail.com>"]
description = "Request body limiting for the Iron framework"
repository = "https://github.com/gsquire/limiter"
keywords = ["iron", "http", "hyper"]
license = "MIT"

[dependencies]
iron = "0.4"
url = "1.2"
