[package]
name = "limiter"
version = "0.4.0"
authors = ["Garrett Squire <garrettsquire@gmail.com>"]
description = "Request size limiting for the Iron framework"
repository = "https://github.com/gsquire/limiter"
documentation = "https://docs.rs/limiter"
keywords = ["iron", "http", "hyper"]
license = "MIT"

[dependencies]
iron = "0.6.0"
